modify websocket url

--- a/src/front/.env.example
+++ b/src/front/.env.example
@@ -1,4 +1,10 @@
 VITE_BASE_URL=/* server url */
+VITE_CHAT_WS_URL=/* websocket url */
+VITE_DM_WS_URL=/* websocket url */
+VITE_STATE_WS_URL=/* websocket url */
+VITE_NOTI_WS_URL=/* websocket url */
+VITE_GAME_WS_URL=/* websocket url */
+
 VITE_BASE_REDIRECT_URL=/* website url */
 VITE_REQUEST_URL=http://${VITE_BASE_URL}
 
